new implwmwntation of the resource